# Todo-List

./: .gitignore  Cargo.toml  LICENSE  README.md  Todo_Data
src/: Tester.txt  data_handler.rs  main.rs  parsing_handler.rs  todo_backend.rs  tui_handler.rs
src/tui_handler/: Todo_Data  todo_renderers.rs  tui_buffer_handler.rs  tui_input_handler.rs  tui_rendering_handler.rs
